Implemented Game creation endpoint and verified POST request functionality